css/login.css
@CHARSET "UTF-8";

*, ::before, ::after {
	box-sizing: content-box;
}

html,body {
	height: 100%;
}

h1 {
	color: #1C94C4;
	font-size: 1.83rem;
}

a {
	text-decoration: none;
	color: #1c94c4;
	font-family: Tahoma, Verdana, Arial, Helvetica, sans-serif;
}

a:hover {
	text-decoration: underline;
	color: #ea7d1e;
}

#login-title {
	width: 70%;
	margin-left: 15%;
}

#login-body {
	background: #E1E7EC;
	margin: 0;
	padding: 0;
	height: 100%;
	position: relative;
	font-size: 1rem;
	font-family: "Raleway";
	font-weight: 500;
}

#login-header {
}

#login-logo, #login-content {
	width: 350px;
	margin-left: auto;
	margin-right: auto;
	text-align: center;
	position: absolute;
	left: 0;
	right: 0;
	top: 0;
}

#login-logo {
	padding-left: 20px;
	padding-right: 20px;
	padding-top: 10px;
	padding-bottom: 10px;
	height: 54px;
	margin-top: 150px;
}

#login-content {
	padding: 20px;
	background-color: #fff;
	border: 2px solid #CCD4DB;
	border-radius: 4px;
	margin-top: 224px;
}

@media (max-height: 700px)
{
	#login-logo {
		margin-top: 0;
	}
	#login-content {
		margin-top: 74px;
	}
	h1 {
		margin-top: 0;
	}
}

#login-logo img {
	border: 0;
}

#login-form {
	padding-top: 1em;
}

#login-additional-content {
	position: absolute;
	left: 0;
	top: 0;
	margin-top: 150px;
}

#login-form-content > div {
	width: 70%;
	margin-left: 15%;
	color: #37322f;
	margin-top: 10px;
}

#login-form-content .divider {
	margin-top: 17px;
}

#login-form-content .divider hr {
	margin: 0.5rem auto;
	width:40%;
	background-color: #E1E7EC;
}

#login-form-content .divider hr.left {
	float:left;
}

#login-form-content .divider hr.right {
	float:right;
}

#login-input > div {
	text-align: left;
	margin-top: 10px;
}

#login-additional-controls > div {
	text-align: left;
	margin-top: 10px;
}

#login-additional-controls input {
	background-color: #fff;
	height: 2em;
	padding: 0.1em 1em;
	border: solid 2px #DDD;
	border-radius: 0.25em;
	width: calc(100% - 2em - 4px);
}

#login-additional-controls input:focus {
	border-color: #A0AEC0;
}



#login-submit.forgotpwd-submit input,
#login-submit.changepwd-submit input
{
	width: 100%;
}

#login-submit input.login-submit-secondary, #forgot_pwd_sent input.forgot_pwd_done {
	background-color: #e0e0e0;
	color: #333a4b;
}

#login-submit input, #forgot_pwd_sent input{
	background-color: #404B5A;
	padding: 0.1em 1em;
	border-radius: 0.25em;
	width: 100%;
	color: #E1E7EC;
	border: 0;
	height: 2.2em;
	margin-top: 10px;
	cursor: pointer;
}

.center {
	text-align: center;
}

.v-spacer {
	padding-top: 1em;
}

.sso-button {
	margin: 5px 0px;
	position: relative;
	cursor: pointer;
	padding: 0.7em 0.5em;
	border-radius: 0.25em;

	background-color: #E4E7EB;
	filter: grayscale(1) opacity(0.8);
	transition-duration: 750ms;
	transition-property: filter;
}

.sso-button:hover {
	filter: grayscale(0) opacity(1);
}

.sso-image {
	position: absolute;
	left: 5%;
	height: 1em;
	margin-right: 1em;
	top: 0;
	bottom: 0;
	margin-top: auto;
	margin-bottom: auto;
}

#login-input .invalid input{
	border-color: #F56565;
}


#login-input .invalid .message, #login-submit.invalid .message {
	color: #F56565;
	display: inline-block;
	padding: 5px;
}

#forgot_pwd_sent{
	margin-left: 15%;
	width: 70%;
}
	

